# pic-nix-foot

./: .gitignore  CMakeLists.txt  README.md  Readme.md  batch.py  build.sh  config_sample.json  main.cpp  setup.sh  summary.py
alfven/: alfven-linear-theory.npz  batch.py  config.json  config.toml
buneman/: batch.py  buneman-linear-theory.npz  config.json  config.toml
hacks/: ion-bg-subtraction.patch
patches/: ion-bg-subtraction.patch
weibel/: config.toml
